--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Basic and simple form class with less than 300 lines of code. Meant to be used in a WordPress environment.
+Basic and simple form validation class with less than 300 lines of code. Meant to be used in a WordPress environment.
